<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz">QUIZ</string>
    <string name="userName">Your name</string>
    <string name="contact">CHOOSE CONTACT</string>
    <string name="getStarted">GET STARTED</string>
    <string name="email">abc@email.com</string>
    <string name="photo">CHOOSE PHOTO</string>
    <string name="nameOfPlayerInputText">The name of the player is: </string>
    <string name="quizResult"> Quiz result </string>
    <string name="next"> NEXT </string>
    <string name="tryAgain"> TRY AGAIN </string>
    <string name="home"> Home </string>
    <string name="quizTime"> Quiz time </string>
    <string name="profile"> Profile </string>
    <string name="listOfQuestions"> List of questions </string>
    <string name="newQuestion"> New question </string>
    <string name="playerName"> Player name: </string>
    <string name="question">Question...?</string>
    <string name="correct_answer">correct answer</string>
    <string name="incorrect_answer">incorrect answer</string>
    <string name="add_your_custom_question">Add your custom question with answers here:</string>
    <string name="add_question">ADD QUESTION</string>

</resources>