<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            android:checked="true" />
        <item
            android:id="@+id/quizStartFragment"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/quizTime" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/questionListFragment"
            android:icon="@drawable/ic_list"
            android:title="@string/listOfQuestions" />
        <item
            android:id="@+id/questionAddFragment"
            android:icon="@drawable/ic_add"
            android:title="@string/newQuestion" />
    </group>
</menu>