<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.QuizStartFragment">

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/quiz_start_fragment_text_view_layout_marginTop"
            android:textSize="@dimen/quiz_start_fragment_text_view_text_size"
            android:text="@string/quiz"
            android:textColor="@color/morningBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/quiz_start_fragment_edit_text_layout_marginTop"
            android:ems="8"
            android:inputType="textPersonName"
            android:hint="@string/userName"
            android:textSize="@dimen/quiz_start_fragment_edit_text_text_size"
            android:textColor="@color/morningBlue"
            android:backgroundTint="@color/morningBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appName" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textSize="@dimen/quiz_start_fragment_edit_text_text_size"
            android:textColor="@color/morningBlue"
            android:backgroundTint="@color/morningBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <Button
            android:id="@+id/chooseContactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/quiz_start_fragment_first_button_marginTop"
            android:text="@string/contact"
            android:backgroundTint="@color/TimberWolf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <Button
            android:id="@+id/chooseImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:backgroundTint="@color/TimberWolf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseContactButton" />

        <Button
            android:id="@+id/getStartedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getStarted"
            android:textSize="@dimen/quiz_start_fragment_getStartedButton_textSize"
            android:backgroundTint="@color/TimberWolf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseImageButton" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/quiz_start_fragment_imageView_layout_width"
            android:layout_height="@dimen/quiz_start_fragment_imageView_layout_height"
            android:layout_marginTop="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>